Bug 698892 - Replace slashes in dnd'd text

https://bugzilla.gnome.org/show_bug.cgi?id=698892